# auth0

./: .gitignore  LICENSE  README.md  auth0.cabal  default.nix  packages.nix  shell.nix
src/: Auth0.hs
src/Auth0/: Authentication.hs  Management.hs  Request.hs  Types.hs
src/Auth0/Authentication/: AccountLinking.hs  AuthorizeClient.hs  ChangePassword.hs  GetToken.hs  Impersonation.hs  Login.hs  Logout.hs  Passwordless.hs  RevokeRefreshToken.hs  SAML.hs  Signup.hs  UserProfile.hs  WS.hs
src/Auth0/Management/: Blacklists.hs  ClientGrants.hs  Clients.hs  Connections.hs  DeviceCredentials.hs  Emails.hs  Grants.hs  Guardian.hs  Jobs.hs  Logs.hs  ResourceServers.hs  Rules.hs  RulesConfigs.hs  Stats.hs  Tenants.hs  Tickets.hs  UserBlocks.hs  Users.hs  UsersByEmail.hs
test/: Main.hs
